force-app/main/default/objects/NEO_FamilyInfo__c/fields/NEO_dob__c.field-meta.xml
<CustomField>
    <fullName>dob__c</fullName>
    <label>dob__c</label>
    <length>20</length>
    <type>Text</type>
</CustomField>