force-app/main/default/objects/NEO_FamilyInfo__c/fields/NEO_EmpToFi__c.field-meta.xml
<CustomField>
    <fullName>EmpToFi__c</fullName>
    <label>EmpToFi</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Familys</relationshipLabel>
    <relationshipName>Familys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>