force-app/main/default/objects/NEO_FamilyInfo__c/fields/NEO_firstName__c.field-meta.xml
<CustomField>
    <fullName>firstName__c</fullName>
    <label>firstName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>