force-app/main/default/objects/NEO_FamilyInfo__c/fields/NEO_lastName__c.field-meta.xml
<CustomField>
    <fullName>lastName__c</fullName>
    <label>lastName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>