force-app/main/default/objects/NEO_FamilyInfo__c/fields/NEO_middleName__c.field-meta.xml
<CustomField>
    <fullName>middleName__c</fullName>
    <label>middleName</label>
    <length>30</length>
    <type>Text</type>
</CustomField>