force-app/main/default/objects/NEO_FamilyInfo__c/fields/NEO_relation__c.field-meta.xml
<CustomField>
    <fullName>relation__c</fullName>
    <label>relation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Son</fullName>
            </value>
            <value>
                <fullName>Daughter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>